tests/golden/13.lean.expected
tests/golden/13.lean:22:2: error: aesop: maximum number of rule applications (100) reached. Set the 'maxRuleApplications' option to increase the limit.
tests/golden/13.lean:27:2: error: aesop: failed to prove the goal after exhaustive search.
